--- a/CourseQuest/requirements.txt
+++ b/CourseQuest/requirements.txt
@@ -1,8 +1,431 @@
-Flask==3.0.3
-Flask_Cors==4.0.1
-linkedin_scraper==2.11.2
-pydantic==1.10.9
-stable_diffusion==0.0.0
-summarizer==0.0.7
+absl-py==1.4.0
+accelerate==0.28.0
+aiodns==3.2.0
+aiohttp==3.9.3
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+assemblyai==0.10.0
+asttokens==2.2.1
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==22.2.0
+backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.1.3
+beautifulsoup4==4.12.0
+bleach==6.0.0
+blinker==1.7.0
+boto3==1.34.117
+botocore==1.34.117
+Brotli==1.1.0
+bs4==0.0.2
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+chex==0.1.86
+click==8.1.7
+cmake==3.26.3
+colorama==0.4.6
+comm==0.1.3
+contourpy==1.0.7
+cryptography==42.0.7
+cycler==0.11.0
+datasets==2.18.0
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+diffusers==0.27.2
+dill==0.3.8
+dnspython==2.6.1
+docopt==0.6.2
+einops==0.6.1
+email_validator==2.1.1
+encodec==0.1.1
+etils==1.7.0
+executing==1.2.0
+expo==0.1.2
+fastapi==0.111.0
+fastapi-cli==0.0.4
+fastjsonschema==2.16.3
+filelock==3.12.2
+Flask==3.0.2
+Flask-Cors==4.0.1
+flatbuffers==23.3.3
+flax==0.8.4
+fonttools==4.39.3
+fqdn==1.5.1
+frozenlist==1.3.3
+fsspec==2023.6.0
+funcy==2.0
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.0
+h11==0.14.0
+h5py==3.8.0
+html5lib==1.1
+httpcore==0.17.2
+httptools==0.6.1
+httpx==0.24.1
+huggingface-hub==0.23.2
+idna==3.4
+importlib-metadata==6.6.0
+importlib_resources==6.4.0
+inquirerpy==0.3.4
+ipykernel==6.22.0
+ipython==8.12.3
+ipython-genutils==0.2.0
+ipywidgets==8.1.2
+isoduration==20.11.0
+itsdangerous==2.1.2
+jax==0.4.28
+jaxlib==0.4.28
+jedi==0.18.2
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.2.0
+jsonpatch==1.33
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.6.3
+jupyter_client==8.1.0
+jupyter_core==5.3.0
+jupyter_server==2.5.0
+jupyter_server_terminals==0.4.4
+jupyterlab-pygments==0.2.2
+jupyterlab_widgets==3.0.10
+keras==2.12.0
+keyboard==0.13.5
+kiwisolver==1.4.4
+langchain==0.2.1
+langchain-core==0.2.3
+langchain-text-splitters==0.2.0
+langsmith==0.1.67
+libclang==16.0.0
+llmlingua==0.2.1
+lxml==5.2.2
+Markdown==3.4.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mediapipe==0.9.3.0
+mistune==2.0.5
+ml-dtypes==0.4.0
+MouseInfo==0.1.3
+mpmath==1.3.0
+msgpack==1.0.8
+multidict==6.0.4
+multiprocess==0.70.16
+nbclassic==0.5.4
+nbclient==0.7.2
+nbconvert==7.16.4
+nbformat==5.8.0
+nest-asyncio==1.5.6
+networkx==3.1
+next==1.0.1
+nltk==3.8.1
+notebook==6.5.3
+notebook_shim==0.2.2
+npm==0.1.1
+numpy==1.26.4
+oauthlib==3.2.2
+openai==0.27.8
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+optax==0.2.2
+optional-django==0.1.0
+orbax-checkpoint==0.5.15
+orjson==3.10.3
+packaging==23.2
+pafy==0.5.5
+pandas==1.5.3
+pandocfilters==1.5.0
+paramiko==3.4.0
+parso==0.8.3
+pexpect==4.8.0
+pfzy==0.3.4
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.5.0
+platformdirs==3.2.0
+prettytable==3.10.0
+prometheus-client==0.16.0
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyarrow==15.0.2
+pyarrow-hotfix==0.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+PyAudio==0.2.13
+PyAutoGUI==0.9.53
+pycares==4.4.0
+pycparser==2.21
+pydantic==2.7.2
+pydantic-extra-types==2.7.0
+pydantic-settings==2.2.1
+pydantic_core==2.18.3
+pydeck==0.9.1
+PyGetWindow==0.0.9
+Pygments==2.14.0
+PyMsgBox==1.0.9
+PyMuPDF==1.24.5
+PyMuPDFb==1.24.3
+PyNaCl==1.5.0
+pyobjc==9.1.1
+pyobjc-core==9.1.1
+pyobjc-framework-Accessibility==9.1.1
+pyobjc-framework-Accounts==9.1.1
+pyobjc-framework-AddressBook==9.1.1
+pyobjc-framework-AdServices==9.1.1
+pyobjc-framework-AdSupport==9.1.1
+pyobjc-framework-AppleScriptKit==9.1.1
+pyobjc-framework-AppleScriptObjC==9.1.1
+pyobjc-framework-ApplicationServices==9.1.1
+pyobjc-framework-AppTrackingTransparency==9.1.1
+pyobjc-framework-AudioVideoBridging==9.1.1
+pyobjc-framework-AuthenticationServices==9.1.1
+pyobjc-framework-AutomaticAssessmentConfiguration==9.1.1
+pyobjc-framework-Automator==9.1.1
+pyobjc-framework-AVFoundation==9.1.1
+pyobjc-framework-AVKit==9.1.1
+pyobjc-framework-BusinessChat==9.1.1
+pyobjc-framework-CalendarStore==9.1.1
+pyobjc-framework-CallKit==9.1.1
+pyobjc-framework-CFNetwork==9.1.1
+pyobjc-framework-ClassKit==9.1.1
+pyobjc-framework-CloudKit==9.1.1
+pyobjc-framework-Cocoa==9.1.1
+pyobjc-framework-Collaboration==9.1.1
+pyobjc-framework-ColorSync==9.1.1
+pyobjc-framework-Contacts==9.1.1
+pyobjc-framework-ContactsUI==9.1.1
+pyobjc-framework-CoreAudio==9.1.1
+pyobjc-framework-CoreAudioKit==9.1.1
+pyobjc-framework-CoreBluetooth==9.1.1
+pyobjc-framework-CoreData==9.1.1
+pyobjc-framework-CoreHaptics==9.1.1
+pyobjc-framework-CoreLocation==9.1.1
+pyobjc-framework-CoreMedia==9.1.1
+pyobjc-framework-CoreMediaIO==9.1.1
+pyobjc-framework-CoreMIDI==9.1.1
+pyobjc-framework-CoreML==9.1.1
+pyobjc-framework-CoreMotion==9.1.1
+pyobjc-framework-CoreServices==9.1.1
+pyobjc-framework-CoreSpotlight==9.1.1
+pyobjc-framework-CoreText==9.1.1
+pyobjc-framework-CoreWLAN==9.1.1
+pyobjc-framework-CryptoTokenKit==9.1.1
+pyobjc-framework-DataDetection==9.1.1
+pyobjc-framework-DeviceCheck==9.1.1
+pyobjc-framework-DictionaryServices==9.1.1
+pyobjc-framework-DiscRecording==9.1.1
+pyobjc-framework-DiscRecordingUI==9.1.1
+pyobjc-framework-DiskArbitration==9.1.1
+pyobjc-framework-DVDPlayback==9.1.1
+pyobjc-framework-EventKit==9.1.1
+pyobjc-framework-ExceptionHandling==9.1.1
+pyobjc-framework-ExecutionPolicy==9.1.1
+pyobjc-framework-ExternalAccessory==9.1.1
+pyobjc-framework-FileProvider==9.1.1
+pyobjc-framework-FileProviderUI==9.1.1
+pyobjc-framework-FinderSync==9.1.1
+pyobjc-framework-FSEvents==9.1.1
+pyobjc-framework-GameCenter==9.1.1
+pyobjc-framework-GameController==9.1.1
+pyobjc-framework-GameKit==9.1.1
+pyobjc-framework-GameplayKit==9.1.1
+pyobjc-framework-ImageCaptureCore==9.1.1
+pyobjc-framework-IMServicePlugIn==9.1.1
+pyobjc-framework-InputMethodKit==9.1.1
+pyobjc-framework-InstallerPlugins==9.1.1
+pyobjc-framework-InstantMessage==9.1.1
+pyobjc-framework-Intents==9.1.1
+pyobjc-framework-IntentsUI==9.1.1
+pyobjc-framework-IOBluetooth==9.1.1
+pyobjc-framework-IOBluetoothUI==9.1.1
+pyobjc-framework-IOSurface==9.1.1
+pyobjc-framework-iTunesLibrary==9.1.1
+pyobjc-framework-KernelManagement==9.1.1
+pyobjc-framework-LatentSemanticMapping==9.1.1
+pyobjc-framework-LaunchServices==9.1.1
+pyobjc-framework-libdispatch==9.1.1
+pyobjc-framework-libxpc==9.1.1
+pyobjc-framework-LinkPresentation==9.1.1
+pyobjc-framework-LocalAuthentication==9.1.1
+pyobjc-framework-LocalAuthenticationEmbeddedUI==9.1.1
+pyobjc-framework-MailKit==9.1.1
+pyobjc-framework-MapKit==9.1.1
+pyobjc-framework-MediaAccessibility==9.1.1
+pyobjc-framework-MediaLibrary==9.1.1
+pyobjc-framework-MediaPlayer==9.1.1
+pyobjc-framework-MediaToolbox==9.1.1
+pyobjc-framework-Metal==9.1.1
+pyobjc-framework-MetalKit==9.1.1
+pyobjc-framework-MetalPerformanceShaders==9.1.1
+pyobjc-framework-MetalPerformanceShadersGraph==9.1.1
+pyobjc-framework-MetricKit==9.1.1
+pyobjc-framework-MLCompute==9.1.1
+pyobjc-framework-ModelIO==9.1.1
+pyobjc-framework-MultipeerConnectivity==9.1.1
+pyobjc-framework-NaturalLanguage==9.1.1
+pyobjc-framework-NetFS==9.1.1
+pyobjc-framework-Network==9.1.1
+pyobjc-framework-NetworkExtension==9.1.1
+pyobjc-framework-NotificationCenter==9.1.1
+pyobjc-framework-OpenDirectory==9.1.1
+pyobjc-framework-OSAKit==9.1.1
+pyobjc-framework-OSLog==9.1.1
+pyobjc-framework-PassKit==9.1.1
+pyobjc-framework-PencilKit==9.1.1
+pyobjc-framework-PHASE==9.1.1
+pyobjc-framework-Photos==9.1.1
+pyobjc-framework-PhotosUI==9.1.1
+pyobjc-framework-PreferencePanes==9.1.1
+pyobjc-framework-PushKit==9.1.1
+pyobjc-framework-Quartz==9.1.1
+pyobjc-framework-QuickLookThumbnailing==9.1.1
+pyobjc-framework-ReplayKit==9.1.1
+pyobjc-framework-SafariServices==9.1.1
+pyobjc-framework-SceneKit==9.1.1
+pyobjc-framework-ScreenCaptureKit==9.1.1
+pyobjc-framework-ScreenSaver==9.1.1
+pyobjc-framework-ScreenTime==9.1.1
+pyobjc-framework-ScriptingBridge==9.1.1
+pyobjc-framework-SearchKit==9.1.1
+pyobjc-framework-Security==9.1.1
+pyobjc-framework-SecurityFoundation==9.1.1
+pyobjc-framework-SecurityInterface==9.1.1
+pyobjc-framework-ServiceManagement==9.1.1
+pyobjc-framework-ShazamKit==9.1.1
+pyobjc-framework-Social==9.1.1
+pyobjc-framework-SoundAnalysis==9.1.1
+pyobjc-framework-Speech==9.1.1
+pyobjc-framework-SpriteKit==9.1.1
+pyobjc-framework-StoreKit==9.1.1
+pyobjc-framework-SyncServices==9.1.1
+pyobjc-framework-SystemConfiguration==9.1.1
+pyobjc-framework-SystemExtensions==9.1.1
+pyobjc-framework-UniformTypeIdentifiers==9.1.1
+pyobjc-framework-UserNotifications==9.1.1
+pyobjc-framework-UserNotificationsUI==9.1.1
+pyobjc-framework-VideoSubscriberAccount==9.1.1
+pyobjc-framework-VideoToolbox==9.1.1
+pyobjc-framework-Virtualization==9.1.1
+pyobjc-framework-Vision==9.1.1
+pyobjc-framework-WebKit==9.1.1
+pyparsing==3.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+pyrsistent==0.19.3
+PyScreeze==0.1.28
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+python-multipart==0.0.9
+pyttsx3==2.90
+pytweening==1.0.5
+pytz==2023.3
+PyYAML==6.0
+pyzmq==25.0.2
+qtconsole==5.4.1
+QtPy==2.3.1
+regex==2023.6.3
+requests==2.32.3
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rsa==4.9
+rubicon-objc==0.4.6
+runpod==1.6.2
+s3transfer==0.10.1
+safetensors==0.4.3
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+Send2Trash==1.8.0
+shellingham==1.5.4
+six==1.16.0
+sklearn==0.0.post1
+smmap==5.0.0
+sniffio==1.3.0
+sounddevice==0.4.6
+soupsieve==2.4
+SpeechRecognition==3.10.0
+SQLAlchemy==2.0.30
+stack-data==0.6.2
+starlette==0.37.2
 streamlit==1.35.0
-PyMuPDF>=1.24.3<=1.24.5
+suno-bark @ git+https://github.com/suno-ai/bark.git@6cd7f0ccd75fbbd9c84c8ce14bf4e700a573eef8
+sympy==1.12
+tailwind==3.1.5b0
+tenacity==8.3.0
+tensorboard==2.12.2
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow-estimator==2.12.0
+tensorflow-macos==2.12.0
+tensorstore==0.1.60
+termcolor==2.3.0
+terminado==0.17.1
+thop==0.1.1.post2209072238
+threadpoolctl==3.1.0
+tiktoken==0.6.0
+tinycss2==1.2.1
+tokenizers==0.19.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.12.5
+toolz==0.12.1
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
+tornado==6.2
+tqdm==4.65.0
+tqdm-loggable==0.2
+traitlets==5.9.0
+transformers==4.41.2
+typer==0.12.3
+typing_extensions==4.12.1
+ujson==5.10.0
+ultralytics==8.0.120
+uri-template==1.2.0
+urllib3==1.26.15
+uvicorn==0.30.1
+uvloop==0.19.0
+valgrind==0.0.0
+watchdog==4.0.1
+watchfiles==0.22.0
+wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.5.1
+websockets==11.0.3
+Werkzeug==3.0.1
+widgetsnbextension==4.0.10
+wrapt==1.14.1
+xxhash==3.4.1
+yarg==0.1.9
+yarl==1.9.2
+youtube-dl==2021.12.17
+zipp==3.15.0
